--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
   <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
-  <h1>Hello</h1>
+  <header>
+    <div class="logo">Logo</div>
+    <nav>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+      <a href="#">Link</a>
+    </nav>
+  </header>
 </body>
 </html>
