search bar added to header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <a href="#">Link</a>
       <a href="#">Link</a>
     </nav>
+    <div class="search">
+      <form><input type="search" placeholder="Search"></form>
+    </div>
   </header>
   
   <section id="about">
