header nav development

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <header>
     <div class="logo">Logo</div>
     <nav>
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-      <a href="#">Link</a>
-      <a href="#">Link</a>
+      <a href="#">Link 1</a>
+      <a href="#">Link 2</a>
+      <a href="#">Link 3</a>
+      <a href="#">Link 4</a>
     </nav>
     <div class="search">
       <form><input type="search" placeholder="Search"></form>
